# fast-api-learning

./: README.md  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  requirements.txt  settings.py
app/: db.py  main.py  settings.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/pages/: router.py
app/tasks/: celery.py  tasks.py
app/templates/: hotels.html
app/users/: auth.py  dao.py  depends.py  models.py  router.py  schemas.py
app/utils/: decorators.py
migrations/: env.py
migrations/versions/: 174b1c38f0e1_update_room_model.py  21922b9643c0_add_booking_user_room_models.py  443d208e4725_initial_migrations.py  89b986ff07c0_add_email_and_password_cols_for_user.py  975c7074b69a_comment.py  d094440a55be_update_room_model.py
